@@ -18,7 +18,6 @@ import de.mephisto.vpin.restclient.cards.CardTemplateType;
 import de.mephisto.vpin.restclient.frontend.VPinScreen;
 import de.mephisto.vpin.restclient.games.FrontendMediaRepresentation;
 import de.mephisto.vpin.restclient.games.GameRepresentation;
-import edu.umd.cs.findbugs.annotations.NonNull;
 import javafx.animation.ParallelTransition;
 import javafx.animation.Transition;
 import javafx.application.Platform;
@@ -40,6 +39,7 @@ import javafx.scene.media.Media;
 import javafx.scene.media.MediaPlayer;
 import javafx.scene.media.MediaView;
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -369,9 +369,17 @@ public class MenuController implements Initializable {
                   return client.getCardData(game, template);
                 })
                 .thenAcceptLater(carddata -> {
+                  CardSettings cardSettings = client.getPreferenceService().getJsonPreference(PreferenceNames.HIGHSCORE_CARD_SETTINGS, CardSettings.class);
+                  int width = CardResolution.HDReady.toWidth();
+                  int height = CardResolution.HDReady.toHeight();
+                  if(cardSettings.isCustomResolution()) {
+                    width = cardSettings.getCardWidth();
+                    height = cardSettings.getCardHeight();
+                  }
+
                   CardGraphicsHighscore highscoreCard = new CardGraphicsHighscore(true);
                   highscoreCard.setTemplate(template);
-                  highscoreCard.setData(carddata, CardResolution.HDReady);
+                  highscoreCard.setData(carddata, width, height);
                   scoreView.setCenter(highscoreCard);
                 });
           });
@@ -455,7 +463,7 @@ public class MenuController implements Initializable {
     }
 
     //ensures that the scrolling row is centered to the screen.
-    Pane node = (Pane) menuItemsRow.getChildren().get(0);
+    Pane node = (Pane) menuItemsRow.getChildren().getFirst();
     menuItemsRow.setTranslateX(PauseMenuUIDefaults.getScreenWidth() / 2);
 
     BorderPane child = (BorderPane) menuItemsRow.getChildren().get(selectionIndex);
