@@ -8,6 +8,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.invoke.MethodHandles;
+import java.net.URI;
 import java.net.URL;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -20,7 +21,7 @@ public class ImageCache {
   public InputStream getCachedUrlImage(String imageUrl) {
     try {
       if (!imageCache.containsKey(imageUrl)) {
-        URL url = new URL(imageUrl);
+        URL url = URI.create(imageUrl).toURL();
         ByteArrayOutputStream bis = new ByteArrayOutputStream();
         InputStream is = null;
         is = url.openStream();
@@ -35,10 +36,10 @@ public class ImageCache {
 
         byte[] bytes = bis.toByteArray();
         imageCache.put(imageUrl, bytes);
-        LOG.info("Cached image URL " + imageUrl + ", cache size: " + imageCache.size());
+        LOG.info("Cached image URL {}, cache size: {}", imageUrl, imageCache.size());
       }
     } catch (IOException e) {
-      LOG.error("Failed to read image from URL: " + e.getMessage(), e);
+      LOG.error("Failed to read image from URL: {}", e.getMessage(), e);
     }
 
     byte[] bytes = imageCache.get(imageUrl);
