@@ -4,7 +4,6 @@ import de.mephisto.vpin.commons.utils.StringSimilarity;
 import de.mephisto.vpin.connectors.vps.model.VPSChanges;
 import de.mephisto.vpin.connectors.vps.model.VpsDiffTypes;
 import de.mephisto.vpin.restclient.PreferenceNames;
-import de.mephisto.vpin.restclient.competitions.CompetitionType;
 import de.mephisto.vpin.restclient.frontend.TableDetails;
 import de.mephisto.vpin.restclient.games.GameList;
 import de.mephisto.vpin.restclient.games.GameListItem;
@@ -18,18 +17,21 @@ import de.mephisto.vpin.server.emulators.EmulatorService;
 import de.mephisto.vpin.server.frontend.FrontendService;
 import de.mephisto.vpin.server.highscores.*;
 import de.mephisto.vpin.server.listeners.EventOrigin;
-import de.mephisto.vpin.server.mame.MameRomAliasService;
 import de.mephisto.vpin.server.mame.MameService;
 import de.mephisto.vpin.server.players.Player;
 import de.mephisto.vpin.server.players.PlayerService;
 import de.mephisto.vpin.server.preferences.PreferenceChangedListener;
 import de.mephisto.vpin.server.preferences.PreferencesService;
+import de.mephisto.vpin.server.vpinmame.VPinMameRomAliasService;
+import de.mephisto.vpin.server.vpinmame.VPinMameService;
 import de.mephisto.vpin.server.vps.VpsService;
 import de.mephisto.vpin.server.vpx.VPXService;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.apache.commons.io.FileUtils;
+import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.InitializingBean;
@@ -41,7 +43,6 @@ import org.springframework.stereotype.Service;
 
 import java.io.File;
 import java.util.*;
-import java.util.stream.Collectors;
 
 
 @Order(10)
@@ -70,7 +71,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   private PreferencesService preferencesService;
 
   @Autowired
-  private MameRomAliasService mameRomAliasService;
+  private VPinMameRomAliasService VPinMameRomAliasService;
 
   @Autowired
   private VpsService vpsService;
@@ -85,7 +86,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   private PlayerService playerService;
 
   @Autowired
-  private MameService mameService;
+  private VPinMameService vPinMameService;
 
   @Autowired
   private EmulatorService emulatorService;
@@ -95,6 +96,9 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
 
   @Autowired
   private GameLifecycleService gameLifecycleService;
+
+  @Autowired
+  private MameService mameService;
 
   private ServerSettings serverSettings;
 
@@ -106,7 +110,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   public List<Game> getGames() {
     long start = System.currentTimeMillis();
     List<Game> games = getKnownGames(-1);
-    LOG.info("Game details fetch took " + (System.currentTimeMillis() - start) + "ms.");
+    LOG.info("Game details fetch took {}ms.", (System.currentTimeMillis() - start));
     return games;
   }
 
@@ -162,9 +166,9 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   public boolean reload() {
     vpxService.clearCache();
     gameCachingService.clearCache();
-    emulatorService.loadEmulators();
+    emulatorService.reloadEmulators();
     List<GameEmulator> emulators = emulatorService.getValidGameEmulators();
-    mameRomAliasService.clearCache(emulators);
+    VPinMameRomAliasService.clearCache(emulators);
     gameCachingService.clearCache();
     getKnownGames(-1);
     return true;
@@ -176,11 +180,11 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   public boolean reloadEmulator(int emulatorId) {
     GameEmulator emulator = emulatorService.getGameEmulator(emulatorId);
     if (emulator != null) {
-      mameRomAliasService.clearCache(Arrays.asList(emulator));
+      VPinMameRomAliasService.clearCache(List.of(emulator));
       gameCachingService.clearCacheForEmulator(emulatorId);
     }
 
-    emulatorService.loadEmulators();
+    emulatorService.reloadEmulators();
     gameCachingService.clearCache();
     getKnownGames(emulatorId);
     return true;
@@ -209,6 +213,11 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   @SuppressWarnings("unused")
   public List<Game> getKnownGames(int emulatorId) {
     return gameCachingService.getKnownGames(emulatorId);
+  }
+
+  @SuppressWarnings("unused")
+  public List<Game> getKnownFpGames(int emulatorId) {
+    return gameCachingService.getKnownFpGames(emulatorId);
   }
 
   public List<Game> getGamesByRom(int emulatorId, @NonNull String rom) {
@@ -305,13 +314,13 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     }
 
     long duration = System.currentTimeMillis() - start;
-    LOG.info("Recent score fetch took " + duration + "ms.");
+    LOG.info("Recent score fetch took {}ms.", duration);
     return summary;
   }
 
   @Nullable
-  public Game scanGame(int gameId) {
-    return gameCachingService.scanGame(gameId);
+  public Game scanGame(int gameId, boolean forceScan) {
+    return gameCachingService.scanGame(gameId, forceScan);
   }
 
   @Nullable
@@ -362,7 +371,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   public GameList getImportableTables(int emuId) {
     GameEmulator emulator = emulatorService.getGameEmulator(emuId);
     if (emulator == null) {
-      LOG.warn("No emulator found for id " + emuId);
+      LOG.warn("No emulator found for id {}", emuId);
       return new GameList();
     }
 
@@ -382,7 +391,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     }
 
     List<Game> games = frontendService.getGamesByEmulator(emulator.getId());
-    List<String> emulatorGameFileNames = games.stream().map(Game::getGameFileName).collect(Collectors.toList());
+    List<String> emulatorGameFileNames = games.stream().map(Game::getGameFileName).toList();
     for (File file : files) {
       String gameFileName = emulator.getGameFileName(file);
       if (!emulatorGameFileNames.contains(gameFileName)) {
@@ -391,6 +400,12 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
         item.setFileName(file.getAbsolutePath());
         item.setFileSize(file.length());
         item.setEmuId(emulator.getId());
+
+        if (emulator.isMameEmulator()) {
+          String fullName = mameService.resolveMAMENameFor(FilenameUtils.getBaseName(file.getName()));
+          item.setName(fullName);
+        }
+
         list.getItems().add(item);
       }
     }
@@ -431,7 +446,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
           continue;
         }
 
-        if (StringUtils.startsWithIgnoreCase(tableFile.getAbsolutePath(), emu.getGamesDirectory())) {
+        if (Strings.CI.startsWith(tableFile.getAbsolutePath(), emu.getGamesDirectory())) {
           matchingEmulators.add(emu);
           break;
         }
@@ -454,7 +469,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     }
 
 
-    LOG.info("Resource Game Event Handler resolved \"" + game + "\" for table name \"" + table + "\" from emulator {}", emuId);
+    LOG.info("Resource Game Event Handler resolved \"{}\" for table name \"{}\" from emulator {}", game, table, emuId);
     return game;
   }
 
@@ -502,7 +517,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     gameDetails.setExtTableId(extTableId);
     gameDetails.setExtTableVersionId(extTableVersionId);
     gameDetailsRepositoryService.saveAndFlush(gameDetails);
-    LOG.info("Linked game " + gameId + " to " + extTableId + "/" + extTableVersionId);
+    LOG.info("Linked game {} to {}/{}", gameId, extTableId, extTableVersionId);
     // update the table in the frontend
     frontendService.vpsLink(gameId, extTableId, extTableVersionId);
 
@@ -515,7 +530,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     if (overwrite || StringUtils.isEmpty(gameDetails.getTableVersion())) {
       gameDetails.setTableVersion(version);
       gameDetailsRepositoryService.saveAndFlush(gameDetails);
-      LOG.info("Version saved for " + gameId + " to " + version);
+      LOG.info("Version saved for {} to {}", gameId, version);
       gameLifecycleService.notifyGameUpdated(gameId);
       return true;
     }
@@ -537,7 +552,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
       }
     }
     catch (Exception e) {
-      LOG.error("Failed to reset update flag for " + gameId + ": " + e.getMessage(), e);
+      LOG.error("Failed to reset update flag for {}: {}", gameId, e.getMessage(), e);
     }
   }
 
@@ -587,7 +602,7 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
       }
     }
     catch (Exception e) {
-      LOG.error("Failed to read event log: " + e.getMessage(), e);
+      LOG.error("Failed to read event log: {}", e.getMessage(), e);
     }
     return null;
   }
@@ -617,14 +632,14 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
     }
 
     if (tableMatch != null && match <= MATCHING_THRESHOLD) {
-      LOG.info("Found matching table '" + tableMatch.getGameDisplayName() + "' with matching value of '" + match + "' for term '" + term + "'");
+      LOG.info("Found matching table '{}' with matching value of '{}' for term '{}'", tableMatch.getGameDisplayName(), match, term);
       return tableMatch;
     }
     if (tableMatch != null) {
-      LOG.info("Closed table match '" + tableMatch.getGameDisplayName() + "' with value '" + match + "' not sufficient for term '" + term + "'");
+      LOG.info("Closed table match '{}' with value '{}' not sufficient for term '{}'", tableMatch.getGameDisplayName(), match, term);
     }
     else {
-      LOG.info("No match for term '" + term + "'");
+      LOG.info("No match for term '{}'", term);
     }
     return null;
   }
@@ -637,49 +652,59 @@ public class GameService implements InitializingBean, ApplicationListener<Applic
   }
 
   public boolean clearMameCaches() {
-    mameRomAliasService.clearCache(emulatorService.getVpxGameEmulators());
+    VPinMameRomAliasService.clearCache(emulatorService.getVpxGameEmulators());
     List<Game> games = getKnownGames(-1);
-    return mameService.clearGamesCache(games);
+    return vPinMameService.clearGamesCache(games);
   }
 
   public boolean clearMameCacheFor(String rom) {
-    return mameService.clearCacheFor(rom);
+    return vPinMameService.clearCacheFor(rom);
   }
 
   public boolean clearAliasCache() {
     List<GameEmulator> gameEmulators = emulatorService.getValidGameEmulators();
-    return mameRomAliasService.clearCache(gameEmulators);
+    return VPinMameRomAliasService.clearCache(gameEmulators);
   }
 
   @Override
   public void onApplicationEvent(ApplicationReadyEvent event) {
+    initService();
   }
 
   @Override
-  public void afterPropertiesSet() throws Exception {
-    preferencesService.addChangeListener(this);
-    preferenceChanged(PreferenceNames.SERVER_SETTINGS, null, null);
+  public void afterPropertiesSet() {
     try {
-      highscoreService.setGameService(this);
+      preferencesService.addChangeListener(this);
+      preferenceChanged(PreferenceNames.SERVER_SETTINGS, null, null);
+      try {
+        highscoreService.setGameService(this);
+      }
+      catch (Exception e) {
+        LOG.error("Error initializing GameService: {}", e.getMessage(), e);
+      }
+      clearAliasCache();
+      LOG.info("{} initialization finished.", this.getClass().getSimpleName());
     }
     catch (Exception e) {
-      LOG.error("Error initializing GameService: " + e.getMessage(), e);
+      LOG.error("Failed to initialize GameService: {}", e.getMessage(), e);
     }
-    clearAliasCache();
-    LOG.info("{} initialization finished.", this.getClass().getSimpleName());
+  }
 
-    //ALWAYS AVOID CALLING GETKNOWNGAMES DURING THE INITILIZATION PHASE OF THE SERVER
-    List<Integer> unknownGames = getUnknownGames();
-    if (unknownGames.isEmpty()) {
-      new Thread(() -> {
-        Thread.currentThread().setName("Game Service Initializer");
+  private void initService() {
+    try {
+      //ALWAYS AVOID CALLING GETKNOWNGAMES DURING THE INITILIZATION PHASE OF THE SERVER
+      List<Integer> unknownGames = getUnknownGames();
+      if (unknownGames.isEmpty()) {
         List<Game> games = getKnownGames(-1);
         vpsService.update(games);
         clearMameCaches();
 
         List<GameEmulator> gameEmulators = emulatorService.getValidGameEmulators();
-        mameService.clearValidationsCache(gameEmulators);
-      }).start();
+        vPinMameService.clearValidationsCache(gameEmulators);
+      }
+    }
+    catch (Exception e) {
+      LOG.error("Failed to initialize GameService: {}", e.getMessage(), e);
     }
   }
 }
