@@ -1,9 +1,9 @@
 package de.mephisto.vpin.server.util;
 
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.io.IOUtils;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.CacheControl;
@@ -13,9 +13,8 @@ import org.springframework.http.ResponseEntity;
 import java.io.BufferedInputStream;
 import java.io.File;
 import java.io.FileInputStream;
-import java.io.IOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.TimeUnit;
 
 public class RequestUtil {
@@ -29,13 +28,13 @@ public class RequestUtil {
 
   public static boolean doGet(String url) {
     try {
-      HttpURLConnection connection = (HttpURLConnection) new URL(url).openConnection();
+      HttpURLConnection connection = (HttpURLConnection) URI.create(url).toURL().openConnection();
       connection.setConnectTimeout(5000);
       connection.setReadTimeout(500);
       connection.setRequestMethod("GET");
       int responseCode = connection.getResponseCode();
       return (200 <= responseCode && responseCode <= 399);
-    } catch (IOException exception) {
+    } catch (Exception exception) {
       return false;
     }
   }
@@ -48,7 +47,7 @@ public class RequestUtil {
           .cacheControl(CacheControl.maxAge(3600 * 24 * 7, TimeUnit.SECONDS).cachePublic())
           .body(bytes);
     } catch (Exception e) {
-      LOG.error("Failed to serialize image " + filename + ": " + e.getMessage(), e);
+      LOG.error("Failed to serialize image {}: {}", filename, e.getMessage(), e);
       throw e;
     }
   }
@@ -64,7 +63,7 @@ public class RequestUtil {
             .cacheControl(CacheControl.maxAge(3600 * 24 * 7, TimeUnit.SECONDS).cachePublic())
             .body(IOUtils.toByteArray(in));
       } catch (Exception e) {
-        LOG.error("Failed to serialize image " + file.getAbsolutePath() + ": " + e.getMessage(), e);
+        LOG.error("Failed to serialize image {}: {}", file.getAbsolutePath(), e.getMessage(), e);
         throw e;
       } finally {
         in.close();
@@ -73,7 +72,7 @@ public class RequestUtil {
     }
     else {
       if (file != null) {
-        LOG.info("Image " + file.getAbsolutePath() + " not found.");
+        LOG.info("Image {} not found.", file.getAbsolutePath());
       }
     }
     return null;
