@@ -3,14 +3,13 @@ package de.mephisto.vpin.server.vpx;
 import de.mephisto.vpin.commons.POV;
 import de.mephisto.vpin.commons.utils.VPXKeyManager;
 import de.mephisto.vpin.commons.utils.WinRegistry;
-import de.mephisto.vpin.restclient.util.FileUtils;
 import de.mephisto.vpin.restclient.vpx.TableInfo;
 import de.mephisto.vpin.server.VPinStudioException;
 import de.mephisto.vpin.server.games.Game;
 import de.mephisto.vpin.server.system.SystemService;
-import edu.umd.cs.findbugs.annotations.Nullable;
 import org.apache.commons.configuration2.Configuration;
 import org.apache.commons.configuration2.INIConfiguration;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.BeanWrapper;
@@ -23,10 +22,7 @@ import org.springframework.web.server.ResponseStatusException;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static org.springframework.http.HttpStatus.INTERNAL_SERVER_ERROR;
 
@@ -158,11 +154,11 @@ public class VPXService implements InitializingBean {
     if (game != null) {
       File povFile = game.getPOVFile();
       if (povFile.exists()) {
-        LOG.info("Deleting " + povFile.getAbsolutePath());
+        LOG.info("Deleting {}", povFile.getAbsolutePath());
         return povFile.delete();
       }
       else {
-        LOG.info("POV file " + povFile.getAbsolutePath() + " does not exist for deletion");
+        LOG.info("POV file {} does not exist for deletion", povFile.getAbsolutePath());
       }
     }
     else {
@@ -180,7 +176,7 @@ public class VPXService implements InitializingBean {
         }
       }
       catch (Exception e) {
-        LOG.error("Error executing shutdown: " + e.getMessage(), e);
+        LOG.error("Error executing shutdown: {}", e.getMessage(), e);
       }
     }
     else {
@@ -211,7 +207,7 @@ public class VPXService implements InitializingBean {
           return new TableInfo(values);
         }
         catch (Exception e) {
-          LOG.error("Failed to read table info: " + e.getMessage());
+          LOG.error("Failed to read table info: {}", e.getMessage());
         }
       }
     }
@@ -238,7 +234,7 @@ public class VPXService implements InitializingBean {
       if (gameFile.exists()) {
         try {
           VPXUtil.importVBS(gameFile, vbs, useTempFile);
-          LOG.info("Written table sources " + gameFile.getAbsolutePath());
+          LOG.info("Written table sources {}", gameFile.getAbsolutePath());
           return true;
         }
         catch (IOException e) {
@@ -276,7 +272,7 @@ public class VPXService implements InitializingBean {
         return VPXUtil.getChecksum(gameFile);
       }
       else {
-        LOG.info("Game file " + gameFile.getAbsolutePath() + " does not exist for reading the checksum.");
+        LOG.info("Game file {} does not exist for reading the checksum.", gameFile.getAbsolutePath());
       }
     }
     else {
@@ -288,7 +284,7 @@ public class VPXService implements InitializingBean {
   public boolean setNvOffset(Game game, int nvOffset, boolean keepVbsFiles) throws Exception {
     if (game.isVpxGame() && game.getNvOffset() != nvOffset) {
       String script = VPXUtil.exportVBS(game.getGameFile(), true);
-      List<String> lines = Arrays.stream(script.split("\n")).filter(l -> !l.contains("NVOffset(") && !l.contains("NVOffset (")).collect(Collectors.toList());
+      List<String> lines = Arrays.stream(script.split("\n")).filter(l -> !l.contains("NVOffset(") && !l.contains("NVOffset (")).toList();
 
       boolean replaced = nvOffset == 0;
       StringBuilder builder = new StringBuilder();
@@ -331,7 +327,7 @@ public class VPXService implements InitializingBean {
         this.keyManager = new VPXKeyManager(getPlayerConfiguration(false));
       }
       catch (Exception e) {
-        LOG.error("Failed to read VPX ini file: " + e.getMessage(), e);
+        LOG.error("Failed to read VPX ini file: {}", e.getMessage(), e);
       }
     }
   }
