@@ -10,6 +10,7 @@ import org.slf4j.LoggerFactory;
 import javax.net.ssl.*;
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
@@ -44,7 +45,7 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       }
 
       String url = location + URLEncoder.encode(descriptor.getFilename(), StandardCharsets.UTF_8).replace("+", "%20");
-      LOG.info("Downloading " + url);
+      LOG.info("Downloading {}", url);
       FileOutputStream fout = new FileOutputStream(target);
       HttpURLConnection conn = getConnection(url);
       in = new BufferedInputStream(conn.getInputStream());
@@ -55,7 +56,7 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       fout.close();
       conn.disconnect();
     } catch (IOException e) {
-      LOG.error("Failed to download " + descriptor.getFilename() + ": " + e.getMessage(), e);
+      LOG.error("Failed to download {}: {}", descriptor.getFilename(), e.getMessage(), e);
       target.delete();
     }
     finally {
@@ -80,7 +81,7 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       }
 
       String url = location + URLEncoder.encode(FilenameUtils.getBaseName(descriptor.getFilename()) + ".json", StandardCharsets.UTF_8).replace("+", "%20");
-      LOG.info("Downloading " + url);
+      LOG.info("Downloading {}", url);
       FileOutputStream fout = new FileOutputStream(target);
       HttpURLConnection conn = getConnection(url);
       in = new BufferedInputStream(conn.getInputStream());
@@ -96,7 +97,7 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       fout.close();
       conn.disconnect();
     } catch (IOException e) {
-      LOG.error("Failed to download descriptor file " + descriptor.getFilename() + ": " + e.getMessage());
+      LOG.error("Failed to download descriptor file {}: {}", descriptor.getFilename(), e.getMessage());
     }
   }
 
@@ -120,7 +121,7 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
 //          jsonBuffer.append(str);
 //        }
 //        in.close();
-//
+
 //        String json = jsonBuffer.toString();
 //        List<ArchiveDescriptor> archiveDescriptors = ArchiveUtil.readArchiveDescriptors(json, this.getArchiveSource());
 //        for (ArchiveDescriptor archiveDescriptor : archiveDescriptors) {
@@ -165,13 +166,13 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
     return new BufferedInputStream(conn.getInputStream());
   }
 
-  private HttpURLConnection getConnection(String location) {
+  private HttpURLConnection getConnection(String location) throws IOException {
     HttpURLConnection conn = null;
     try {
       String login = getVPXZSource().getLogin();
       String password = PasswordUtil.decrypt(getVPXZSource().getPassword());
 
-      URL url = new URL(location);
+      URL url = URI.create(location).toURL();
       conn = (HttpURLConnection) url.openConnection();
 
       if (!StringUtils.isEmpty(login) && !StringUtils.isEmpty(password)) {
@@ -185,19 +186,19 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       conn.addRequestProperty("Accept-Language", "en-US,en;q=0.8");
       return conn;
     } catch (IOException e) {
-      LOG.error("Failed to read HTTP URL \"" + location + "\":" + e.getMessage());
+      LOG.error("Failed to read HTTP URL \"{}\":{}", location, e.getMessage());
       try {
         BufferedReader in = new BufferedReader(new InputStreamReader(conn.getErrorStream()));
         String str;
         while ((str = in.readLine()) != null) {
-          LOG.error("HTTP ERROR: " + str);
+          LOG.error("HTTP ERROR: {}", str);
         }
         throw e;
       } catch (IOException ex) {
         LOG.error(ex.getMessage(), ex);
+        throw ex;
       }
     }
-    return null;
   }
 
   /**
@@ -236,13 +237,13 @@ public class VPXZSourceAdapterHttpServer implements VPXZSourceAdapter {
       // Install the all-trusting host verifier
       HttpsURLConnection.setDefaultHostnameVerifier(allHostsValid);
     } catch (Exception e) {
-      LOG.error("Failed to disable SSL verification: " + e.getMessage(), e);
+      LOG.error("Failed to disable SSL verification: {}", e.getMessage(), e);
     }
   }
 
   @Override
   public void invalidate() {
     cache.clear();
-    LOG.info("Invalidated archive source \"" + this.getVPXZSource() + "\"");
+    LOG.info("Invalidated archive source \"{}\"", this.getVPXZSource());
   }
 }
