@@ -18,9 +18,10 @@ import de.mephisto.vpin.ui.events.StudioEventListener;
 import de.mephisto.vpin.ui.preferences.PreferenceType;
 import de.mephisto.vpin.ui.tables.TableDialogs;
 import de.mephisto.vpin.ui.tables.panels.PlayButtonController;
+import de.mephisto.vpin.ui.util.Dialogs;
+import de.mephisto.vpin.ui.util.FrontendUtil;
 import de.mephisto.vpin.ui.vps.VpsTableContainer;
 import de.mephisto.vpin.ui.vps.VpsVersionContainer;
-import de.mephisto.vpin.ui.util.FrontendUtil;
 import javafx.application.Platform;
 import javafx.beans.property.SimpleObjectProperty;
 import javafx.beans.property.SimpleStringProperty;
@@ -43,6 +44,7 @@ import org.slf4j.LoggerFactory;
 
 import java.io.IOException;
 import java.net.URL;
+import java.time.OffsetDateTime;
 import java.util.*;
 
 import static de.mephisto.vpin.commons.utils.WidgetFactory.ERROR_STYLE;
@@ -109,16 +111,7 @@ public class WeeklySubscriptionsController extends BaseCompetitionController imp
 
   @FXML
   public void onStop() {
-    Frontend frontend = client.getFrontendService().getFrontendCached();
-    Optional<ButtonType> result = WidgetFactory.showConfirmation(Studio.stage,
-        FrontendUtil.replaceNames("Stop all emulators and [Frontend] processes?", frontend, null));
-    if (result.isPresent() && result.get().equals(ButtonType.OK)) {
-      JFXFuture.supplyAsync(() -> {
-        return client.getFrontendService().terminateFrontend();
-      }).thenAcceptLater((requestResult) -> {
-        LOG.info("Kill frontend request finished.");
-      });
-    }
+    Dialogs.killFrontend();
   }
 
   @FXML
@@ -308,7 +301,7 @@ public class WeeklySubscriptionsController extends BaseCompetitionController imp
       if (value.competition == null) {
         return new SimpleObjectProperty<>("-");
       }
-      dateLabel.setText(DateUtil.formatDateTime(value.competition.getCreatedAt()));
+      dateLabel.setText(DateUtil.formatDateTime(value.competition.getStartDate()));
 
       vBox.getChildren().add(dateLabel);
       return new SimpleObjectProperty(vBox);
@@ -345,7 +338,7 @@ public class WeeklySubscriptionsController extends BaseCompetitionController imp
       Label timeRemainingValueLabel = new Label();
       timeRemainingValueLabel.getStyleClass().add("default-text");
       timeRemainingValueLabel.setStyle(getLabelCss(value));
-      timeRemainingValueLabel.setText(DateUtil.formatDuration(new Date(), value.competition.getEndDate()));
+      timeRemainingValueLabel.setText(DateUtil.formatDuration(OffsetDateTime.now(), value.competition.getEndDate()));
       remainingBox.getChildren().addAll(timeRemainingLabel, timeRemainingValueLabel);
 
       vBox.getChildren().addAll(endDateLabel, durationBox, remainingBox);
@@ -373,7 +366,7 @@ public class WeeklySubscriptionsController extends BaseCompetitionController imp
       @Override
       public Boolean call(TableView<WeeklyCompetitionModel> gameRepresentationTableView) {
         if (!gameRepresentationTableView.getSortOrder().isEmpty()) {
-          TableColumn<WeeklyCompetitionModel, ?> column = gameRepresentationTableView.getSortOrder().get(0);
+          TableColumn<WeeklyCompetitionModel, ?> column = gameRepresentationTableView.getSortOrder().getFirst();
           if (column.equals(tableColumn)) {
             Collections.sort(tableView.getItems(), Comparator.comparing(o -> o.competition != null ? o.competition.getName() : null));
             if (column.getSortType().equals(TableColumn.SortType.DESCENDING)) {
@@ -492,7 +485,7 @@ public class WeeklySubscriptionsController extends BaseCompetitionController imp
     tableNavigateBtn.setDisable(model.isEmpty() || model.get().getGame() == null);
     dataManagerBtn.setDisable(model.isEmpty() || model.get().getGame() == null);
 
-    competitionsController.setCompetition(model.isPresent() ? model.get().competition : null);
+    competitionsController.setCompetition(model.map(weeklyCompetitionModel -> weeklyCompetitionModel.competition).orElse(null));
 
     PlayerRepresentation defaultPlayer = client.getPlayerService().getDefaultPlayer();
     reloadBtn.setDisable(defaultPlayer == null);
