@@ -14,8 +14,6 @@ import de.mephisto.vpin.ui.competitions.dialogs.CompetitionOfflineDialogControll
 import de.mephisto.vpin.ui.preferences.PreferencesSavingModel;
 import de.mephisto.vpin.ui.util.ProgressDialog;
 import de.mephisto.vpin.ui.util.ProgressResultModel;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
@@ -27,9 +25,12 @@ import javafx.fxml.Initializable;
 import javafx.scene.control.*;
 import javafx.stage.Stage;
 import org.apache.commons.lang3.StringUtils;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -126,14 +127,12 @@ public class IScoredGameRoomDialogController implements Initializable, DialogCon
 
     ProgressResultModel progressDialog = ProgressDialog.createProgressDialog(new IScoredGameRoomLoadingProgressModel(url, force));
     if (!progressDialog.getResults().isEmpty()) {
-      GameRoom gr = (GameRoom) progressDialog.getResults().get(0);
+      GameRoom gr = (GameRoom) progressDialog.getResults().getFirst();
       nameLabel.setText(gr.getName());
 
-      urlField.setDisable(false);
       validateBtn.setDisable(false);
 
       badgeCombo.setDisable(false);
-      urlField.setDisable(false);
       validateBtn.setDisable(false);
       ignoreHiddenCheckbox.setDisable(false);
       setDisabled(false);
@@ -163,7 +162,7 @@ public class IScoredGameRoomDialogController implements Initializable, DialogCon
         if (first.isPresent()) {
           try {
             String vpsUrlString = first.get();
-            URL urlUrl = new URL(vpsUrlString);
+            URL urlUrl = URI.create(vpsUrlString).toURL();
             String idSegment = urlUrl.getQuery();
 
             String tableId = idSegment.substring(idSegment.indexOf("=") + 1);
@@ -254,6 +253,8 @@ public class IScoredGameRoomDialogController implements Initializable, DialogCon
   public void setData(@NonNull IScoredSettings iScoredSettings, @Nullable IScoredGameRoom gr) {
     this.iScoredSettings = iScoredSettings;
     this.gameRoom = gr;
+    this.urlField.setDisable(gr != null);
+
     if (this.gameRoom == null) {
       this.gameRoom = new IScoredGameRoom();
       this.gameRoom.setUuid(UUID.randomUUID().toString());
@@ -280,7 +281,7 @@ public class IScoredGameRoomDialogController implements Initializable, DialogCon
     setDisabled(true);
 
     List<String> badges = new ArrayList<>(client.getCompetitionService().getCompetitionBadges());
-    badges.add(0, null);
+    badges.addFirst(null);
     ObservableList<String> imageList = FXCollections.observableList(badges);
     badgeCombo.setItems(imageList);
     badgeCombo.setCellFactory(c -> new CompetitionOfflineDialogController.CompetitionImageListCell(client));
