@@ -1,23 +1,23 @@
 package de.mephisto.vpin.ui.tables;
 
 import de.mephisto.vpin.commons.utils.WidgetFactory;
-import de.mephisto.vpin.restclient.altcolor.AltColorTypes;
+import de.mephisto.vpin.restclient.altcolor.AltColor;
 import de.mephisto.vpin.restclient.emulators.GameEmulatorRepresentation;
 import de.mephisto.vpin.restclient.frontend.EmulatorType;
 import de.mephisto.vpin.restclient.games.GameRepresentation;
 import de.mephisto.vpin.restclient.validation.ValidationState;
-import de.mephisto.vpin.restclient.altcolor.AltColor;
 import de.mephisto.vpin.ui.Studio;
 import de.mephisto.vpin.ui.events.EventManager;
+import de.mephisto.vpin.ui.tables.validation.GameValidationTexts;
 import de.mephisto.vpin.ui.util.DismissalUtil;
 import de.mephisto.vpin.ui.util.LocalizedValidation;
-import de.mephisto.vpin.ui.tables.validation.GameValidationTexts;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.fxml.Initializable;
 import javafx.scene.control.Button;
 import javafx.scene.control.ButtonType;
 import javafx.scene.control.Label;
+import javafx.scene.control.Tooltip;
 import javafx.scene.layout.Pane;
 import javafx.scene.layout.VBox;
 import org.apache.commons.lang3.StringUtils;
@@ -26,7 +26,8 @@ import org.slf4j.LoggerFactory;
 
 import java.lang.invoke.MethodHandles;
 import java.net.URL;
-import java.text.SimpleDateFormat;
+import java.time.format.DateTimeFormatter;
+import java.time.format.FormatStyle;
 import java.util.List;
 import java.util.Optional;
 import java.util.ResourceBundle;
@@ -77,6 +78,9 @@ public class TablesSidebarAltColorController implements Initializable {
 
   @FXML
   private Label errorText;
+
+  @FXML
+  private Label folderLabel;
 
   @FXML
   private Pane altColorRoot;
@@ -177,6 +181,8 @@ public class TablesSidebarAltColorController implements Initializable {
     nameLabel.setText("-");
     typeLabel.setText("-");
     filesLabel.setText("-");
+    folderLabel.setText("-");
+    folderLabel.setTooltip(null);
     restoreBtn.setText("Restore");
     errorBox.setVisible(false);
 
@@ -201,7 +207,7 @@ public class TablesSidebarAltColorController implements Initializable {
       deleteBtn.setDisable(!altColorAvailable);
 
       if (altColorAvailable) {
-        lastModifiedLabel.setText(SimpleDateFormat.getDateTimeInstance().format(altColor.getModificationDate()));
+        lastModifiedLabel.setText(DateTimeFormatter.ofLocalizedDateTime(FormatStyle.MEDIUM).format(altColor.getModificationDate()));
         typeLabel.setText(altColor.getAltColorType().name());
         nameLabel.setText(altColor.getName());
         altColor = client.getAltColorService().getAltColor(game.getId());
@@ -209,12 +215,13 @@ public class TablesSidebarAltColorController implements Initializable {
 
         List<String> files = altColor.getFiles();
         filesLabel.setText(String.join(", ", files));
-
+        folderLabel.setText(altColor.getFolder());
+        folderLabel.setTooltip(new Tooltip(altColor.getFolder()));
 
         List<ValidationState> validationStates = altColor.getValidationStates();
         errorBox.setVisible(!validationStates.isEmpty());
         if (!validationStates.isEmpty()) {
-          validationState = validationStates.get(0);
+          validationState = validationStates.getFirst();
           LocalizedValidation validationResult = GameValidationTexts.getValidationResult(game, validationState);
           errorTitle.setText(validationResult.getLabel());
           errorText.setText(validationResult.getText());
