@@ -9,10 +9,7 @@ import de.mephisto.vpin.connectors.assets.TableAsset;
 import de.mephisto.vpin.connectors.assets.TableAssetSource;
 import de.mephisto.vpin.restclient.assets.AssetMetaData;
 import de.mephisto.vpin.restclient.converter.MediaConversionCommand;
-import de.mephisto.vpin.restclient.frontend.Frontend;
-import de.mephisto.vpin.restclient.frontend.FrontendType;
-import de.mephisto.vpin.restclient.frontend.TableAssetSearch;
-import de.mephisto.vpin.restclient.frontend.VPinScreen;
+import de.mephisto.vpin.restclient.frontend.*;
 import de.mephisto.vpin.restclient.games.FrontendMediaItemRepresentation;
 import de.mephisto.vpin.restclient.games.FrontendMediaRepresentation;
 import de.mephisto.vpin.restclient.games.GameRepresentation;
@@ -34,8 +31,8 @@ import de.mephisto.vpin.ui.util.ProgressDialog;
 import de.mephisto.vpin.ui.util.ProgressResultModel;
 import de.mephisto.vpin.ui.util.StudioFolderChooser;
 import de.mephisto.vpin.ui.util.SystemUtil;
-import edu.umd.cs.findbugs.annotations.NonNull;
-import edu.umd.cs.findbugs.annotations.Nullable;
+import org.jspecify.annotations.NonNull;
+import org.jspecify.annotations.Nullable;
 import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.beans.value.ObservableValue;
@@ -63,6 +60,7 @@ import javafx.stage.Stage;
 import javafx.stage.WindowEvent;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -354,18 +352,18 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
   @FXML
   private void onAudioBlank() {
     JFXFuture.supplyAsync(() -> {
-      int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
-      return client.getGameMediaService().addBlank(objectId, isPlaylistMode(), screen);
-    })
-    .thenAcceptLater(status -> {
-      if (isGameMode()) {
-        EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
-      }
-      refreshTableMediaView();
-    })
-    .onErrorLater(e -> {
-      WidgetFactory.showAlert(localStage, "Error", "Adding blank media failed: " + e.getMessage());
-    });
+          int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
+          return client.getGameMediaService().addBlank(objectId, isPlaylistMode(), screen);
+        })
+        .thenAcceptLater(status -> {
+          if (isGameMode()) {
+            EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
+          }
+          refreshTableMediaView();
+        })
+        .onErrorLater(e -> {
+          WidgetFactory.showAlert(localStage, "Error", "Adding blank media failed: " + e.getMessage());
+        });
   }
 
   @FXML
@@ -387,14 +385,16 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
     JFXFuture.supplyAsync(() -> {
       if (isPlaylistMode()) {
         return client.getFrontendService().getPlaylistMediaDirectory(this.playlist.getId(), screen);
-      } else if (isGameMode()) {
+      }
+      else if (isGameMode()) {
         return client.getFrontendService().getMediaDirectory(this.game.getId(), screen);
-      } else {
+      }
+      else {
         return null;
       }
     }).thenAcceptLater(screenDir -> {
       if (screenDir != null) {
-        if(selectedItem != null) {
+        if (selectedItem != null) {
           screenDir = new File(screenDir, selectedItem.getName());
           SystemUtil.openFile(screenDir);
           return;
@@ -476,7 +476,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
     Stage stage = (Stage) ((Labeled) e.getSource()).getScene().getWindow();
     List<FrontendMediaItemRepresentation> selectedItems = assetList.getSelectionModel().getSelectedItems();
     if (!selectedItems.isEmpty()) {
-      String msg = selectedItems.size() == 1 ? ("Delete \"" + selectedItems.get(0).getName() + "\"?") : ("Delete " + selectedItems.size() + " items?");
+      String msg = selectedItems.size() == 1 ? ("Delete \"" + selectedItems.getFirst().getName() + "\"?") : ("Delete " + selectedItems.size() + " items?");
       Optional<ButtonType> result = WidgetFactory.showConfirmation(stage, msg, "The selected media will be deleted.", null, "Delete");
       if (result.isPresent() && result.get().equals(ButtonType.OK)) {
         JFXFuture.runAsync(() -> {
@@ -513,7 +513,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
       String name = selectedItem.getName();
       String baseName = FilenameUtils.getBaseName(name);
       String uniqueAssetName = null; //FileUtils.baseUniqueAsset(name);
-      if (StringUtils.equals(baseName, uniqueAssetName)) {
+      if (Strings.CI.equals(baseName, uniqueAssetName)) {
       }
 
       Optional<ButtonType> buttonType = WidgetFactory.showConfirmation(localStage, "Set As Default Asset",
@@ -521,26 +521,26 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
           "Current default asset file will be automatically renamed.");
       if (buttonType.isPresent() && buttonType.get().equals(ButtonType.OK)) {
         JFXFuture.supplyAsync(() -> {
-          int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
-          return client.getGameMediaService().setDefaultMedia(objectId, isPlaylistMode(), screen, selectedItem.getName());
-        })
-        .thenAcceptLater(status -> {
-          if (!status) {
-            WidgetFactory.showAlert(localStage, "Warning",
-                "Coundl't set default asset for " + getGameOrPlaylistName() + ".",
-                "Please check the asset files as they may be in an inconsistent state.");
+              int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
+              return client.getGameMediaService().setDefaultMedia(objectId, isPlaylistMode(), screen, selectedItem.getName());
+            })
+            .thenAcceptLater(status -> {
+              if (!status) {
+                WidgetFactory.showAlert(localStage, "Warning",
+                    "Coundl't set default asset for " + getGameOrPlaylistName() + ".",
+                    "Please check the asset files as they may be in an inconsistent state.");
 
-          }
-          if (isGameMode()) {
-            EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
-          }
-          onReload();
-        })
-        .onErrorLater(e -> {
-          WidgetFactory.showAlert(localStage, "Error",
-              "An error occurred while setting default asset for " + getGameOrPlaylistName() + "\".",
-              e.getMessage());
-        });
+              }
+              if (isGameMode()) {
+                EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
+              }
+              onReload();
+            })
+            .onErrorLater(e -> {
+              WidgetFactory.showAlert(localStage, "Error",
+                  "An error occurred while setting default asset for " + getGameOrPlaylistName() + "\".",
+                  e.getMessage());
+            });
       }
     }
   }
@@ -572,19 +572,19 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
 
         final String newName = s;
         JFXFuture.supplyAsync(() -> {
-          int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
-          return client.getGameMediaService().renameMedia(objectId, isPlaylistMode(), screen, selectedItem.getName(), newName);
-        })
-        .thenAcceptLater(status -> {
-          if (isGameMode()) {
-            EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
-          }
-          onReload();
-        })
-        .onErrorLater(e -> {
-          LOG.error("Renaming table asset failed: " + e.getMessage(), e);
-          WidgetFactory.showAlert(localStage, "Error", "Renaming failed: " + e.getMessage());
-        });
+              int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
+              return client.getGameMediaService().renameMedia(objectId, isPlaylistMode(), screen, selectedItem.getName(), newName);
+            })
+            .thenAcceptLater(status -> {
+              if (isGameMode()) {
+                EventManager.getInstance().notifyTableChange(game.getId(), null, game.getGameName());
+              }
+              onReload();
+            })
+            .onErrorLater(e -> {
+              LOG.error("Renaming table asset failed: " + e.getMessage(), e);
+              WidgetFactory.showAlert(localStage, "Error", "Renaming failed: " + e.getMessage());
+            });
       }
       else if (!StringUtils.isEmpty(s) && !FileUtils.isValidFilename(s)) {
         WidgetFactory.showAlert(localStage, "Error", "Renaming cancelled, invalid character found.");
@@ -626,7 +626,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
         new TableAssetSearchProgressModel("Asset Search", game == null ? -1 : game.getId(), source, screen, term));
     List<Object> results = progressDialog.getResults();
     if (!results.isEmpty()) {
-      return (TableAssetSearch) results.get(0);
+      return (TableAssetSearch) results.getFirst();
     }
 
     TableAssetSearch empty = new TableAssetSearch();
@@ -686,6 +686,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
     ObservableList<FrontendMediaItemRepresentation> items = assetList.getItems();
     String targetName = name + "." + FilenameUtils.getExtension(tableAsset.getName());
     boolean alreadyExists = items.stream().anyMatch(i -> i.getName().equalsIgnoreCase(targetName));
+    VPinScreen loadingScreenId = VPinScreen.Loading;
     if (alreadyExists) {
       Optional<ButtonType> buttonType = WidgetFactory.showConfirmationWithOption(localStage, "Asset Exists",
           "An asset with the same name already exists.",
@@ -695,6 +696,13 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
       }
       else if (buttonType.isPresent() && buttonType.get().equals(ButtonType.APPLY)) {
         append = true;
+
+        if (screen.equals(VPinScreen.Loading) && client.getFrontendService().getFrontendType().equals(FrontendType.Popper)) {
+          VPinScreen vPinScreen = TableDialogs.openAssetScreenAssignmentDialog();
+          if (vPinScreen != null) {
+            loadingScreenId = vPinScreen;
+          }
+        }
       }
       else {
         return;
@@ -705,7 +713,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
       ProgressDialog.createProgressDialog(stage, new TableAssetDownloadProgressModel(stage, screen, playlist, tableAsset, append));
     }
     else {
-      ProgressDialog.createProgressDialog(stage, new TableAssetDownloadProgressModel(stage, screen, game, tableAsset, append));
+      ProgressDialog.createProgressDialog(stage, new TableAssetDownloadProgressModel(stage, screen, game, tableAsset, append, loadingScreenId));
     }
 
     if (isGameMode()) {
@@ -741,11 +749,11 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
     List<TableAssetSource> assetSources = new ArrayList<>(client.getAssetSourcesService().getAssetSources());
     assetSourceComboBox.setVisible(!assetSources.isEmpty());
     if (!assetSources.isEmpty()) {
-      assetSources.add(0, null);
+      assetSources.addFirst( null);
 
       TableAssetSource defaultAssetSource = client.getAssetSourcesService().getDefaultAssetSource();
       if (defaultAssetSource != null) {
-        assetSources.add(1, client.getAssetSourcesService().getDefaultAssetSource());
+        assetSources.add(1, defaultAssetSource);
       }
     }
     List<AssetSourceModel> assetSourceModels = assetSources.stream().map(AssetSourceModel::new).collect(Collectors.toList());
@@ -936,19 +944,19 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
           return;
         }
         // else
-        FrontendMediaItemRepresentation mediaItem = list.get(0);
+        FrontendMediaItemRepresentation mediaItem = list.getFirst();
         String mimeType = mediaItem.getMimeType();
         String baseType = MimeTypeUtil.mimeTypeToBaseType(mimeType);
 
         // add a condition, asset should not be the default asset already
         setDefaultBtn.setDisable(setDefaultBtn.isDisable() || FileUtils.isDefaultAsset(mediaItem.getName()));
 
-        boolean atleastone = false;
+        boolean atleastone = !conversionMenu.getItems().isEmpty();
         for (MenuItem item : conversionMenu.getItems()) {
           MediaConversionCommand cmd = (MediaConversionCommand) item.getUserData();
-          boolean visible = cmd.isActiveForType(baseType);
-          atleastone |= visible;
-          item.setVisible(visible);
+//          boolean visible = cmd.isActiveForType(baseType);
+//          atleastone |= visible;
+          item.setVisible(true);
         }
         conversionMenu.setDisable(!atleastone);
 
@@ -996,17 +1004,17 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
 
             String name = "Video Conversion of " + selectedItems.size() + " media items";
             if (selectedItems.size() == 1) {
-              name = "Video Conversion " + "\"" + selectedItems.get(0).getName() + "\"";
+              name = "Video Conversion " + "\"" + selectedItems.getFirst().getName() + "\"";
             }
 
-            int objectId = isPlaylistMode() ? playlist.getId(): game.getId();
+            int objectId = isPlaylistMode() ? playlist.getId() : game.getId();
             ProgressResultModel progressDialog = ProgressDialog.createProgressDialog(
-              new MediaConversionProgressModel(name, objectId, isPlaylistMode(), screen, selectedItems, command));
+                new MediaConversionProgressModel(name, objectId, isPlaylistMode(), screen, selectedItems, command));
             List<Object> results = progressDialog.getResults();
 
             Platform.runLater(() -> {
               if (!results.isEmpty()) {
-                WidgetFactory.showAlert(stage, "Error", "Error converting video: " + results.get(0));
+                WidgetFactory.showAlert(stage, "Error", "Error converting video: " + results.getFirst());
               }
               else {
                 refreshTableMediaView();
@@ -1102,6 +1110,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
   public boolean isPlaylistMode() {
     return playlistsRadio != null && playlistsRadio.isSelected() && this.playlist != null;
   }
+
   public boolean isGameMode() {
     return !isPlaylistMode() && game != null;
   }
@@ -1259,7 +1268,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
     else {
       String term = game.getGameDisplayName();
       term = term.replaceAll("", "");
-      term = term.replaceAll("The", "");
+      term = term.replaceAll("The ", "");
       term = term.replaceAll(", ", "");
       term = term.replaceAll("-", "");
       term = term.replaceAll("'", "");
@@ -1341,7 +1350,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
       }
       else {
         if (this.game == null) {
-          this.game = tablesCombo.getItems().get(0);
+          this.game = tablesCombo.getItems().getFirst();
         }
         return client.getGameMediaService().getGameMedia(this.game.getId());
       }
@@ -1375,7 +1384,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
           deleteBtn.setDisable(false);
         }
 
-        boolean convertable = items.size() == 1 && !items.get(0).getName().contains("(SCREEN");
+        boolean convertable = items.size() == 1 && !items.getFirst().getName().contains("(SCREEN");
         this.addToPlaylistBtn.setDisable(!convertable);
       }
       else {
@@ -1449,7 +1458,7 @@ public class TableAssetManagerDialogController implements Initializable, DialogC
       boolean modal = LocalUISettings.isModal(MODAL_STATE_ID);
       if (!modal) {
         Platform.runLater(() -> {
-          GameRepresentation gameRepresentation = games.get(0);
+          GameRepresentation gameRepresentation = games.getFirst();
           if (this.game == null || this.game.getId() != gameRepresentation.getId()) {
             tablesRadio.setSelected(true);
             setGame(gameRepresentation, screen);
